--- a/Demo001_Opsc/app/src/main/res/layout/activity_manage_collections.xml
+++ b/Demo001_Opsc/app/src/main/res/layout/activity_manage_collections.xml
@@ -23,10 +23,11 @@
             android:text="Back"/>
 
         <!-- FOB -->
-        <TextView
-            android:id="@+id/fob"
-            android:layout_width="209dp"
-            android:layout_height="30dp"
+        <Spinner
+            android:id="@+id/dropdown_menu"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+
             android:text="FOB"/>
 
         <!-- Add sneaker button -->
